--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,10 @@
             "email": "brunoomoises7@gmail.com"
         }
     ],
+    "require": {},
     "autoload": {
         "psr-4": {
             "App\\": "App/"
         }
-    },
-    "require": {}
+    }
 }
